--- a/emailoutput.html
+++ b/emailoutput.html
@@ -2,1078 +2,133 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Proba</title>
+    <title>Test Jinja and email template</title>
 </head>
 <body>
+
+<center>
+    <h1>vpc-47220c82.vpc-state</h1> 
+</center>
+<table>
+	<tr>
+	
+		
+			<td>PrefixListIds</td>
+			<td>[u'Before:-[]', u'After:-deleted']</td>
+		
+	
+		
+			<td>ToPort</td>
+			<td>[u'Before:-8444', u'After:-deleted']</td>
+		
+	
+		
+			<td>DefaultForAz</td>
+			<td>[u'Before:-false', u'After:-true']</td>
+		
+	
+	<tr>
+
+<center>
+    <h1>vpc-45520c34.subnets-state</h1> 
+</center>
+<table>
+	<tr>
+	
+		
+			<td>PrefixListIds</td>
+			<td>[u'Before:-[]', u'After:-deleted']</td>
+		
+	
+		
+			<td>ToPort</td>
+			<td>[u'Before:-8444', u'After:-deleted']</td>
+		
+	
+		
+			<td>DefaultForAz</td>
+			<td>[u'Before:-false', u'After:-true']</td>
+		
+	
+	<tr>
+
 <center>
     <h1>vpc-45520c22.securitygroups-state</h1> 
 </center>
 <table>
-
-	
-	<tr>
-		<td>Description</td>
-		<td>['Before:-Enable access to web service on ELB', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>GroupId</td>
-		<td>['Before:-sg-d3b8c2ae', 'After:-sg-d3b8c2ae']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>GroupName</td>
-		<td>['Before:-qa-inventory-1-0-75-u0d6oQ-WebServiceElbSecurityGroup-SL4DF23EXSE9', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>FromPort</td>
-		<td>['Before:-8443', 'After:-8445']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:-tcp', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>ToPort</td>
-		<td>['Before:-8443', 'After:-8445']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>FromPort</td>
-		<td>['Before:-8444', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:-tcp', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>ToPort</td>
-		<td>['Before:-8444', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:--1', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>OwnerId</td>
-		<td>['Before:-736561528805', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:logical-id', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-WebServiceElbSecurityGroup', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:stack-id', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-arn:aws:cloudformation:us-east-1:736561528805:stack/qa-inventory-1-0-75-u0d6oQ/be2af9b0-b8f3-11e6-8a64-503acac41e61', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:stack-name', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-qa-inventory-1-0-75-u0d6oQ', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:mirror:uri-template', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-http://@host:5775', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:name', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-inventory', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:qualifier', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-u0d6oQ', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:version', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-1.0.75', 'After:-1.0.76']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnelId', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-role=target name=inventory version=1.0.75 stack=inventory-1-0-75-u0d6oQ port=5775 protocol=http', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-servicename', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-inventory:qa:1.0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-servicetypes', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-Inventory', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>VpcId</td>
-		<td>['Before:-vpc-45520c22', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Description</td>
-		<td>['Before:-Enable access to web service on ELB', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>GroupId</td>
-		<td>['Before:-sg-d3b8c2ae', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>GroupName</td>
-		<td>['Before:-qa-inventory-1-0-75-u0d6oQ-WebServiceElbSecurityGroup-SL4DF23EXSE9', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>FromPort</td>
-		<td>['Before:-8443', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:-tcp', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>ToPort</td>
-		<td>['Before:-8443', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>FromPort</td>
-		<td>['Before:-8444', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:-tcp', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>ToPort</td>
-		<td>['Before:-8444', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:--1', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>OwnerId</td>
-		<td>['Before:-736561528805', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:logical-id', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-WebServiceElbSecurityGroup', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:stack-id', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-arn:aws:cloudformation:us-east-1:736561528805:stack/qa-inventory-1-0-75-u0d6oQ/be2af9b0-b8f3-11e6-8a64-503acac41e61', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:stack-name', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-qa-inventory-1-0-75-u0d6oQ', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:mirror:uri-template', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-http://@host:5775', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:name', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-inventory', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:qualifier', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-u0d6oQ', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:version', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-1.0.75', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnelId', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-role=target name=inventory version=1.0.75 stack=inventory-1-0-75-u0d6oQ port=5775 protocol=http', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-servicename', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-inventory:qa:1.0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-servicetypes', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-Inventory', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>VpcId</td>
-		<td>['Before:-vpc-45520c22', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Description</td>
-		<td>['Before:-Enable access to web service on ELB', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>GroupId</td>
-		<td>['Before:-sg-d3b8c2ae', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>GroupName</td>
-		<td>['Before:-qa-inventory-1-0-75-u0d6oQ-WebServiceElbSecurityGroup-SL4DF23EXSE9', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>FromPort</td>
-		<td>['Before:-8443', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:-tcp', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>ToPort</td>
-		<td>['Before:-8443', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>FromPort</td>
-		<td>['Before:-8444', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:-tcp', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>ToPort</td>
-		<td>['Before:-8444', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:--1', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>OwnerId</td>
-		<td>['Before:-736561528805', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:logical-id', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-WebServiceElbSecurityGroup', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:stack-id', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-arn:aws:cloudformation:us-east-1:736561528805:stack/qa-inventory-1-0-75-u0d6oQ/be2af9b0-b8f3-11e6-8a64-503acac41e61', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:stack-name', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-qa-inventory-1-0-75-u0d6oQ', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:mirror:uri-template', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-http://@host:5775', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:name', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-inventory', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:qualifier', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-u0d6oQ', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:version', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-1.0.75', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnelId', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-role=target name=inventory version=1.0.75 stack=inventory-1-0-75-u0d6oQ port=5775 protocol=http', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-servicename', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-inventory:qa:1.0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-servicetypes', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-Inventory', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>VpcId</td>
-		<td>['Before:-vpc-45520c22', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Description</td>
-		<td>['Before:-Enable access to web service on ELB', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>GroupId</td>
-		<td>['Before:-sg-d3b8c2ae', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>GroupName</td>
-		<td>['Before:-qa-inventory-1-0-75-u0d6oQ-WebServiceElbSecurityGroup-SL4DF23EXSE9', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>FromPort</td>
-		<td>['Before:-8443', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:-tcp', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>ToPort</td>
-		<td>['Before:-8443', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>FromPort</td>
-		<td>['Before:-8444', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:-tcp', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>ToPort</td>
-		<td>['Before:-8444', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>IpProtocol</td>
-		<td>['Before:--1', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>CidrIp</td>
-		<td>['Before:-0.0.0.0/0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>PrefixListIds</td>
-		<td>['Before:-[]', 'After:-ajay']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>OwnerId</td>
-		<td>['Before:-736561528805', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:logical-id', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-WebServiceElbSecurityGroup', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:stack-id', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-arn:aws:cloudformation:us-east-1:736561528805:stack/qa-inventory-1-0-75-u0d6oQ/be2af9b0-b8f3-11e6-8a64-503acac41e61', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-aws:cloudformation:stack-name', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-qa-inventory-1-0-75-u0d6oQ', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:mirror:uri-template', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-http://@host:5775', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:name', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-inventory', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:qualifier', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-u0d6oQ', 'After:-60d6oQ']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnel:target:version', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-1.0.75', 'After:-1.0.76']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-funnelId', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-role=target name=inventory version=1.0.75 stack=inventory-1-0-75-u0d6oQ port=5775 protocol=http', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-servicename', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Value</td>
-		<td>['Before:-inventory:qa:1.0', 'After:-deleted']</td>
-	<tr>
-	
-
-	
-	<tr>
-		<td>Key</td>
-		<td>['Before:-servicetypes', 'After:-deleted']</td>
-	<tr>
-	
-
-	
 	<tr>
-		<td>Value</td>
-		<td>['Before:-Inventory', 'After:-deleted']</td>
-	<tr>
 	
-
+		
+			<td>Description</td>
+			<td>[u'Before:-Enable access to web service on ELB', u'After:-deleted']</td>
+		
+	
+		
+			<td>GroupId</td>
+			<td>[u'Before:-sg-d3b8c2ae', u'After:-deleted']</td>
+		
+	
+		
+			<td>GroupName</td>
+			<td>[u'Before:-qa-inventory-1-0-75-u0d6oQ-WebServiceElbSecurityGroup-SL4DF23EXSE9', u'After:-deleted']</td>
+		
+	
+		
+			<td>FromPort</td>
+			<td>[u'Before:-8443', u'After:-deleted']</td>
+		
+	
+		
+			<td>IpProtocol</td>
+			<td>[u'Before:-tcp', u'After:-deleted']</td>
+		
+	
+		
+			<td>CidrIp</td>
+			<td>[u'Before:-0.0.0.0/0', u'After:-deleted']</td>
+		
+	
+		
+			<td>PrefixListIds</td>
+			<td>[u'Before:-[]', u'After:-deleted']</td>
+		
+	
+		
+			<td>ToPort</td>
+			<td>[u'Before:-8443', u'After:-deleted']</td>
+		
+	
+		
+			<td>FromPort</td>
+			<td>[u'Before:-8444', u'After:-deleted']</td>
+		
+	
+		
+			<td>IpProtocol</td>
+			<td>[u'Before:-tcp', u'After:-deleted']</td>
+		
+	
+		
+			<td>CidrIp</td>
+			<td>[u'Before:-0.0.0.0/0', u'After:-deleted']</td>
+		
+	
+		
+			<td>PrefixListIds</td>
+			<td>[u'Before:-[]', u'After:-deleted']</td>
+		
+	
+		
+			<td>ToPort</td>
+			<td>[u'Before:-8444', u'After:-deleted']</td>
+		
+	
+		
+			<td>VpcId</td>
+			<td>[u'Before:-vpc-45520c22', u'After:-deleted']</td>
+		
 	
 	<tr>
-		<td>VpcId</td>
-		<td>['Before:-vpc-45520c22', 'After:-deleted']</td>
-	<tr>
-	
-
 
 </table>
 </body>
