--- a/emailoutput.html
+++ b/emailoutput.html
@@ -14,17 +14,29 @@
 	
 		
 			<td>PrefixListIds</td>
-			<td>[u'Before:-[]', u'After:-deleted']</td>
+			
+				<td>Before:-[]</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>ToPort</td>
-			<td>[u'Before:-8444', u'After:-deleted']</td>
+			
+				<td>Before:-8444</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>DefaultForAz</td>
-			<td>[u'Before:-false', u'After:-true']</td>
+			
+				<td>Before:-false</td>
+			
+				<td>After:-true</td>
+			
 		
 	
 	<tr>
@@ -37,17 +49,29 @@
 	
 		
 			<td>PrefixListIds</td>
-			<td>[u'Before:-[]', u'After:-deleted']</td>
+			
+				<td>Before:-[]</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>ToPort</td>
-			<td>[u'Before:-8444', u'After:-deleted']</td>
+			
+				<td>Before:-8444</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>DefaultForAz</td>
-			<td>[u'Before:-false', u'After:-true']</td>
+			
+				<td>Before:-false</td>
+			
+				<td>After:-true</td>
+			
 		
 	
 	<tr>
@@ -60,72 +84,128 @@
 	
 		
 			<td>Description</td>
-			<td>[u'Before:-Enable access to web service on ELB', u'After:-deleted']</td>
+			
+				<td>Before:-Enable access to web service on ELB</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>GroupId</td>
-			<td>[u'Before:-sg-d3b8c2ae', u'After:-deleted']</td>
+			
+				<td>Before:-sg-d3b8c2ae</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>GroupName</td>
-			<td>[u'Before:-qa-inventory-1-0-75-u0d6oQ-WebServiceElbSecurityGroup-SL4DF23EXSE9', u'After:-deleted']</td>
+			
+				<td>Before:-qa-inventory-1-0-75-u0d6oQ-WebServiceElbSecurityGroup-SL4DF23EXSE9</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>FromPort</td>
-			<td>[u'Before:-8443', u'After:-deleted']</td>
+			
+				<td>Before:-8443</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>IpProtocol</td>
-			<td>[u'Before:-tcp', u'After:-deleted']</td>
+			
+				<td>Before:-tcp</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>CidrIp</td>
-			<td>[u'Before:-0.0.0.0/0', u'After:-deleted']</td>
+			
+				<td>Before:-0.0.0.0/0</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>PrefixListIds</td>
-			<td>[u'Before:-[]', u'After:-deleted']</td>
+			
+				<td>Before:-[]</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>ToPort</td>
-			<td>[u'Before:-8443', u'After:-deleted']</td>
+			
+				<td>Before:-8443</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>FromPort</td>
-			<td>[u'Before:-8444', u'After:-deleted']</td>
+			
+				<td>Before:-8444</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>IpProtocol</td>
-			<td>[u'Before:-tcp', u'After:-deleted']</td>
+			
+				<td>Before:-tcp</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>CidrIp</td>
-			<td>[u'Before:-0.0.0.0/0', u'After:-deleted']</td>
+			
+				<td>Before:-0.0.0.0/0</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>PrefixListIds</td>
-			<td>[u'Before:-[]', u'After:-deleted']</td>
+			
+				<td>Before:-[]</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>ToPort</td>
-			<td>[u'Before:-8444', u'After:-deleted']</td>
+			
+				<td>Before:-8444</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 		
 			<td>VpcId</td>
-			<td>[u'Before:-vpc-45520c22', u'After:-deleted']</td>
+			
+				<td>Before:-vpc-45520c22</td>
+			
+				<td>After:-deleted</td>
+			
 		
 	
 	<tr>
